# technical-standard-note

./: .gitignore  CMakeLists.txt  DESIGN_COMPASS.md  LICENSE  README.md  learning-wiki-Otso.md  learning-wiki-Solum.md
.github/workflows/: build.yml
docs/: language-standard.md  roadmap.md  upstream-and-modifications.md
docs/android/: beta-release-checklist.md  direct-download.md  mobile-roadmap.md  release-notes-template.md
docs/mobile/: learning-wiki-technical-standard-note.md
docs/releases/: desktop-v1.3.11.md
docs/testing/: claim-test-protocol.md  tab-visual-parity-checklist.md
research/: claim-test-protocol.md  librarian-research-notepad-2026-02.md
src/: main.cpp  notepad.manifest  notepad.rc  resource.h
src/core/: crash_diagnostics.cpp  globals.cpp  globals.h  list_continuation.cpp  list_continuation.h  spring_solver.h  types.h
src/lang/: en.h  ja.h  lang.cpp
src/modules/: animation_controller.h  background.cpp  background.h  command_palette.cpp  command_routing.cpp  command_routing.h  commands.cpp  commands.h  design_system.h  dialog.cpp  dialog.h  editor.cpp  editor.h  file.cpp  file.h  graphics_engine.h  icon_actions.cpp  perf_benchmark.cpp  premium_header.h  premium_orchestrator.cpp  premium_orchestrator.h  selection_aura.cpp  selection_aura.h  settings.cpp  settings.h  tab_document.h  tab_layout.cpp  tab_layout.h  tab_model_ops.cpp  tab_model_ops.h  tab_session_io.cpp  tab_session_io.h  tab_spin_chrome.cpp  tab_spin_chrome.h  theme.cpp  theme.h  ui.cpp  ui.h  update_check.cpp
tests/: list_continuation_tests.cpp  session_io_tests.cpp  tab_session_io_tests.cpp
tools/: benchmark-gate.ps1  capture-window.ps1  cleanup-perf-runs.ps1  compare-image-diff.ps1  compare-notepad.ps1  generate_icons.py
